--- a/style.css
+++ b/style.css
@@ -145,7 +145,7 @@ h2 {
 .close-notification {
   position: absolute;
   right: 12px;
-  top: 8px;
+  top: 2px; /* diminua aqui */
   background: transparent;
   border: none;
   font-size: 1.2em;
